2008-12-14
	* Add help of SearchFiles and GetFileId.
	* Change the default of ask argument of undelete to TRUE.

2008-12-13
	* New function of gselect.list, gtk version of select.list.
	* Add help of SummaryCoding, improve help of write.FileList.

2008-12-12
	* Fix bugs of SortByTime(), now should work for R < 2.8.0. Fix bug of GetCodingTable and SummaryCoding.
	* New function of RunOnSelected. Use it to replace select.list.
	* Now popup menu of add to case/ category can add multiple files at a time (Files Tab). 
	* New Coding Button: C2Info

2008-12-10
	* New functions of SearchFiles.

2008-12-09
	* New functions to summary codings: SummaryCoding, GetCodingTable.
	* Add documentation.
	
2008-12-08
	* New function of OrderByTime() for computing time order explicitly.
	* "Show Uncoded files only" popup menu will sort the uncoded file by imported time.
	* Add "Show Coded files only" popup menu in Files Tabs and F-cat Tab.
	* "Sort by ..." in the all the popup-menus call OrderByTime to sort the data.

2008-12-07
	* Better handler the issue of write permission in new project and open project button
	* new function/button to backup project
	* fix bug in close project button
	* Popup menu of Files Tab: "Show uncoded files only" (useful when there are large number of files).
	
2008-12-06 (rc2 of v1.6)
	* bugfix of Freecode rename button and others.
	* Memo in Popup menu in Files Tab.
	* Enhance Mark buttons, so it will not save duplicated information in database.
	* New function relation() for caculating relation between two coding.
	* Improve ViewFileFun() so the codings are highlighted when a file is opened.
	* Add some popup menus.
	* Improve pdelete(),list.deleted() and undelete(). New function of CleanProject().

2008-12-05
	* New functionality of add memo to File category and Code category.
	* Reorganize the memo for Cases.  Now opem case memo by double-click or popup menu
	* Unmark button for cases.
	* Add Settings Tab, so user can change settings easily.
	