@@ -6,5 +6,4 @@ Merge *rqda from different coders
 
 inter-coder reliability 
 
-export coding to html.
-
+export coding to html
