@@ -16,7 +16,7 @@
 list.deleted(type=c("file","code","case","codecategory","filecategory"))
 pdelete(type=c("file","code","case","codecategory","filecategory","coding"),ask=FALSE)
 CleanProject(ask=FALSE)
-undelete(type=c("file","code","case","codecategory","filecategory"),ask=FALSE)
+undelete(type=c("file","code","case","codecategory","filecategory"),ask=TRUE)
 }
 
 \arguments{
