@@ -56,7 +56,7 @@ h1 {
 
 <p>When you have imported a list of files and generate a code list, then you can go on the process of coding. First, you should open a file. Then you read and think, if you think some words is relevant to a code, you can apply that code to the text segment: select a code, select that text segment, and click mark button in the Codes Tab. Then you can find that text segment is highlighted with color (by default, it is blue). We call this process <b>"coding"</b>. You can undo the coding as well: select the same text segment and click Unmark button in the Codes Tab. Now, the highlight is remove, which means that you have succesfully remove that coding. 
 
-<p>If you want to see what information has been attached to a code, you can  double click a code to retrieval all the related coding to that code. This process is called <b>"coding retrieval"</b>. Of course, you can select a code, and then click retrieval button to conduct similar operation. The latter method has an advantage that you can go back to the original file content by clicking the back button within the retrieved coding (though this method takes a bit more time to retrieve the coding). This method can give you a closeness with the original content and avoid, to some extent, segmentation due to coding. To get a overall statistics of coding, you can use R function SummaryCoding() to inspect the "Number of codings for each code", "Average number of words assciated with each code", "Number of files associated with each code". You can get more by GetFileId function. For more information, please refer to the help page by <i>?GetFileId</i>.
+<p>If you want to see what information has been attached to a code, you can  double click a code to retrieval all the related coding to that code. This process is called <b>"coding retrieval"</b>. Of course, you can select a code, and then click retrieval button to conduct similar operation. The latter method has an advantage that you can go back to the original file content by clicking the back button within the retrieved coding (though this method takes a bit more time to retrieve the coding). This method can give you a closeness with the original content and avoid, to some extent, segmentation due to coding. To get a overall statistics of coding, you can use R function SummaryCoding() to inspect the "Number of codings for each code", "Average number of words assciated with each code", "Number of files associated with each code". You can get more by GetCodingTable and GetFileId function. For more information, please refer to the help page by <i>?GetCodingTable</i> and <i>?GetFileId</i>.
 
 
 <p><b>4. Writing memo</b>
