@@ -1,9 +1,13 @@
+2008-12-15
+	* Add help of GetCodingTable.
+	* Fix bugs of "Web Search-Baidu" and "Web Search-Sohu" of the case popup menu (now works for UTF-8 locale).
+
 2008-12-14
 	* Add help of SearchFiles and GetFileId.
 	* Change the default of ask argument of undelete to TRUE.
 
 2008-12-13
-	* New function of gselect.list, gtk version of select.list.
+	* New function of gselect.list, gtk version of select.list (Thanks John).
 	* Add help of SummaryCoding, improve help of write.FileList.
 
 2008-12-12
